Fix app padding on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,3 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
-    "Droid Sans", "Helvetica Neue", sans-serif;
-  -webkit-font-smoothing: subpixel-antialiased;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  min-width: 320px;
-}
-
 .App {
   position: relative;
   overflow: hidden;
@@ -1429,6 +1419,9 @@ button.App-button {
     padding-left: 16px;
     padding-right: 16px;
   }
+  .App {
+    padding-top: 100px;
+  }
 }
 
 @media (max-width: 670px) {
@@ -1523,6 +1516,9 @@ button.App-button {
   }
   .App-header-link-main img.small {
     display: block;
+  }
+  .App {
+    padding-top: 120px;
   }
 }
 
